--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "uuid": "^3.3.2"
   }
 }
